--- a/Todo/todoList/src/app/app.component.html
+++ b/Todo/todoList/src/app/app.component.html
@@ -7,7 +7,7 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<h1>Todo App</h1>
 
-<app-test></app-test>
-
+<button routerLink = "user">User</button>
 <router-outlet></router-outlet>
