added service and interface

--- a/Todo/todoList/src/app/todo-list/todo-list.component.html
+++ b/Todo/todoList/src/app/todo-list/todo-list.component.html
@@ -1,6 +1,6 @@
 <p>{{title}}</p>
 
-<div *ngFor="let item of list">{{item}}
+<div *ngFor="let item of list">{{item.description}}
 
     <div *ngIf = "item <2 ">less than 2 {{item}}</div>
 
