--- a/Todo/todoList/src/app/app.component.html
+++ b/Todo/todoList/src/app/app.component.html
@@ -10,4 +10,6 @@
 <h1>Todo App</h1>
 
 <button routerLink = "user">User</button>
+<button routerLink = "todos">Todos</button>
+
 <router-outlet></router-outlet>
