--- a/Todo/todoList/src/app/todo-list/todo-list.component.html
+++ b/Todo/todoList/src/app/todo-list/todo-list.component.html
@@ -1,9 +1,9 @@
-<p>{{title}}</p>
+<h2>{{title}}</h2>
 
 <div *ngFor="let item of list">{{item.description}}
 
-    <div *ngIf = "item <2 ">less than 2 {{item}}</div>
+    <div *ngIf = "item.importance < 2 ">less than 2 {{item.importance}}</div>
 
 </div>
 
-<div *ngIf = "someBool">hello + {{list}}</div>
+
